add margin/ remove calendar

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -12,9 +12,9 @@
         <li class="nav-item" th:classappend="${activeMenu == 'orders' ? 'active' : ''}">
           <a class="nav-link" href="/orders">Orders</a>
         </li>
-        <li class="nav-item" th:classappend="${activeMenu == 'calendar' ? 'active' : ''}">
-          <a class="nav-link" href="/calendar">Calendar</a>
-        </li>
+<!--        <li class="nav-item" th:classappend="${activeMenu == 'calendar' ? 'active' : ''}">-->
+<!--          <a class="nav-link" href="/calendar">Calendar</a>-->
+<!--        </li>-->
         <li class="nav-item" th:classappend="${activeMenu == 'solution' ? 'active' : ''}">
           <a class="nav-link" href="/solution">QueryGPT</a>
         </li>
