--- a/src/main/resources/templates/ordersList.html
+++ b/src/main/resources/templates/ordersList.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
-        <main class="col-md-8 px-md-3">
+        <main class="col-md-8 px-md-3 mt-4">
             <div>
              <a href="/newOrder" class="btn btn-success my-3">Add order</a>
             </div>
