--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-        <main class="col-md-8 px-md-3">
+        <main class="col-md-8 px-md-3 mt-4">
             <a href="/index" class="btn btn-secondary p-2 my-2">Back</a>
             <div class="row">
                 <div class="col-md-1"></div>
