--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <div class="row">
             <div th:replace="~{fragments/sidebar :: sidebar('wastage')}"></div>
-            <main class="col-md-8 px-md-3">
+            <main class="col-md-8 px-md-3 mt-4">
                 <div class="row">
                     <div class="col col-md-6">
                         <!-- <form id="namesForm" th:action="@{/submitNames}" method="post"-->
