--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
         <div class="row bg img-fluid">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
-            <main class="col-md-8 px-md-3">
+            <main class="col-md-8 px-md-3 mt-5">
                 <div class="row">
                     <div class="col px-2 bg-light calendar-left">
                         <div class="calendar-header">
