--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('solution')}"></div>
-        <main class="col-md-8 px-md-3">
+        <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <div class="col">
                     <h4 class="py-2">Product near expire date:</h4>
