--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
-        <main class="col-md-8 px-md-3">
+        <main class="col-md-8 px-md-3 mt-4">
             <h1 id="newlist">Recipe List</h1>
             <a href="/index" class="btn btn-secondary">Back</a>
             <div class="row">
