--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
-        <main class="col-md-8 px-md-3">
+        <main class="col-md-8 px-md-3 mt-4">
         </main>
         <div class="col"></div>
     </div>
