--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -8,8 +8,8 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('stock')}"></div>
-        <main class="col-md-8 px-md-3">
-            <p>oko</p>
+        <main class="col-md-8 px-md-3 mt-5">
+
                 <table class="table mt-5" id="all-table">
                     <thead class="thead-dark">
                     <th>Name</th>
