--- a/src/main/resources/templates/userNew.html
+++ b/src/main/resources/templates/userNew.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
-        <main class="col-md-8 px-md-3">
+        <main class="col-md-8 px-md-3 mt-5">
             <div class="row py-2">
                 <div class="col col-md-1">
                     <a href="/users/list" class="btn btn-secondary ">Back</a>
