--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Wastege')}"></div>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row bg">
             <div th:replace="~{fragments/sidebar :: sidebar('wastage')}"></div>
             <main class="col-md-8 px-md-3 mt-4">
                 <div class="row">
