--- a/src/main/resources/templates/ordersList.html
+++ b/src/main/resources/templates/ordersList.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Orders')}"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div>
