--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Recipes')}"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <a href="/index" class="btn btn-secondary">Back</a>
