--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Reports')}"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
         </main>
