--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Setup')}"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('setup')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <form th:action="@{/users/updateuser}" th:object="${user}" method="post" class="mt-3">
