--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -4,7 +4,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Edit user' + ${user.username})}"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('users')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
                 <h1 class="col my-2">Edit User <span th:text="${user.username}"></span></h1>
