--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -136,8 +136,12 @@ bg{
 
 #all-table{
     width: 100%;
+    overflow-x: auto; !important;
 }
-
+#itemsList {
+    max-height: 300px;
+    overflow-y: auto; /* Enables vertical scrollbar if content exceeds max-height */
+}
 
 @media (max-width: 767.98px) {
     .sidebar {
