--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -8,17 +8,35 @@
             <div th:replace="~{fragments/sidebar :: sidebar('wastage')}"></div>
             <main class="col-md-8 px-md-3 mt-4">
                 <div class="row">
-                    <div class="col col-md-4 col-sm-12 mt-5">
+                    <div class="col col-md-4 mt-5">
                         <input type="text" id="searchInput" class="form-control mb-3 textfield" placeholder="Search items...">
                         <ul id="itemsList" class="list-group">
                             <li th:each="itemName, iterStat : ${itemsName}" th:id="'item-' + ${iterStat.index}" th:text="${itemName}" class="list-group-item"></li>
                         </ul>
                     </div>
-                    <div class="col col-md-6 col-sm-12">
-                        <!-- <form id="namesForm" th:action="@{/submitNames}" method="post"-->
-                        <!-- Dynamically added fields will go here -->
-                        <button class="btn btn-success" type="submit">Submit</button>
-                        <!--                        </form>-->
+                    <di class="col col-md-1 blank"></di>
+                    <div class="col col-md-4 mt-5 ml-4 wastform">
+                        <form th:action="@{/submit-form}" method="post">
+                            <div class="longlist">
+                                <table id="targetTable">
+                                    <colgroup>
+                                        <col style="width: 70%;">
+                                        <col style="width: 30%;">
+                                    </colgroup>
+                                    <thead>
+                                    <tr>
+                                        <th>Item Name</th>
+                                        <th>Quantity</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <!-- Rows will be appended here -->
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <input type="submit" value="Submit" class="btn btn-success mt-3">
+                        </form>
                     </div>
                 </div>
             </main>
@@ -44,6 +62,7 @@
     </div>
 </div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
+    <script th:src="@{/scripts/formPopulator.js}"></script>
 </body>
 
 </html>
