--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -25,8 +25,8 @@
                                     </colgroup>
                                     <thead>
                                     <tr>
-                                        <th>Item Name</th>
-                                        <th>Quantity</th>
+                                        <th>Name</th>
+                                        <th>Quantity (kg/l)</th>
                                     </tr>
                                     </thead>
                                     <tbody>
