--- a/src/main/resources/templates/fragments/logoBar.html
+++ b/src/main/resources/templates/fragments/logoBar.html
@@ -1,4 +1,4 @@
-<div th:fragment="logoBar(name)" >
+<div th:fragment="logoBar(page)" xmlns:sec="http://www.w3.org/1999/xhtml">
     <div class="container-fluid logo-row">
         <div class="row">
             <div class="col-md-2">
@@ -6,10 +6,13 @@
             </div>
             <div class="col col-md-1"></div>
             <div class="col col-md-7 d-flex align-items-end">
-               <h1 th:text="${name}"></h1>
+               <h1 th:text="${page}"></h1>
             </div>
-            <div class="col col-md-1">
-                <form th:action="@{/logout}" method="post"><input type="submit" class="btn btn-danger" value="Sign Out"/></form>
+            <div class="col col-md-1 d-flex flex-column">
+                <h5 id="userID" th:text="${#authentication.name}"></h5>
+                <form th:action="@{/logout}" method="post">
+                    <input type="submit" class="btn btn-danger" value="Sign Out"/>
+                </form>
             </div>
         </div>
     </div>
