--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -21,7 +21,7 @@
                 <!-- Updated div for the text area with class="my-3" for consistent spacing -->
                 <div class="my-3">
                     <label for="additionalInfo">Information about Restaurant:</label></br>
-                    <textarea id="additionalInfo" class="form-control" name="additionalInfo" rows="4"></textarea>
+                    <textarea id="additionalInfo" name="additionalInfo" rows="4"></textarea>
                 </div>
 
                 <div class="my-3">
