--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -152,6 +152,12 @@ bg{
     display: none;
 }
 
+.greenbox{
+    color: #F6AD55;
+    padding: 0 0 0 20px;
+
+}
+
 @media (max-width: 767.98px) {
     .sidebar {
         width: 100vw;
