--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="col col col-md-4 col-sm-12 px-2 calendar-right">
-                        <div class="row text-center ">
+                        <div class="row text-center pt-3">
                             <div class="col text-light">
                                 <span class="text-center my-3 " th:text="${weather.description}"></span>
                                 <img th:src="${weather.description == 'Sunny and warm' ? '/img/weather/sun.png' :
