--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -61,7 +61,6 @@ body{
 
 .sidebar-sticky {
     position: relative;
-    top: 0px;
     /*height: calc(100vh - 48px);*/
     padding-top: 0.5rem;
     overflow-x: hidden;
@@ -93,7 +92,7 @@ body{
 .logo-row{
     font-weight: bold;
     font-size: 30pt;
-    padding: 0px 0 5px 0;
+    padding: 0 0 5px 0;
     border-bottom-color: #124413;
     border-bottom: solid;
 
@@ -124,6 +123,7 @@ table, card{
     color: #e67e22;
     font-size: 16pt;
     width: 100%;
+    font-weight: normal;
 }
 
 .arrow-btn{
