remove empty tag

--- a/src/main/resources/templates/fragments/logoBar.html
+++ b/src/main/resources/templates/fragments/logoBar.html
@@ -1,4 +1,4 @@
-<div th:fragment="logoBar(page)" xmlns:sec="http://www.w3.org/1999/xhtml">
+<div th:fragment="logoBar(page)">
     <div class="container-fluid logo-row">
         <div class="row">
             <div class="col-md-2">
