adding reports cards

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" th:href="@{/mainLayout.css}"/>
     <link rel="stylesheet" th:href="@{/userCard.css}" />
     <link rel="stylesheet" th:href="@{/calendar.css}" />
+    <link rel="stylesheet" th:href="@{/reports.css}" />
 
 
 
