--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -7,6 +7,55 @@
     <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('reports')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
+            <div class="row">
+                <!-- Card 1 -->
+                <div class="col-md-6 mb-4">
+                    <a href="/index">
+                        <div class="card h-100">
+                            <div class="card-body text-center d-flex justify-content-center align-items-center">
+                                <img src="img/icons/predict.png" class="card-img-top" alt="Prediction">
+                                <div class="overlay">Prediction</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="col-md-6 mb-4">
+                    <a href="/wastage">
+                        <div class="card h-100">
+                            <div class="card-body text-center d-flex justify-content-center align-items-center">
+                                <img src="img/icons/expire.png" class="card-img-top" alt="Expiring">
+                                <div class="overlay">Expiring Products</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="col-md-6 mb-4">
+                    <a href="/stock/total">
+                        <div class="card h-100">
+                            <div class="card-body text-center d-flex justify-content-center align-items-center">
+                                <img src="img/icons/sale.png" class="card-img-top" alt="Sale">
+                                <div class="overlay">Sale</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="col-md-6 mb-4">
+                    <a href="/setup">
+                        <div class="card h-100">
+                            <div class="card-body text-center d-flex justify-content-center align-items-center">
+                                <img src="img/icons/waste.png" class="card-img-top" alt="Waste">
+                                <div class="overlay">Waste</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </main>
         <div class="col"></div>
     </div>
