--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -18,6 +18,7 @@
                 <div class="col col-md-4 mt-5 ml-4 wastform">
                     <form th:action="@{/submit-form}" method="post">
                         <div class="longlist">
+                            <input type="text" class="textfield form-control" placeholder="Recipe Name..">
                             <table id="targetTable">
                                 <colgroup>
                                     <col style="width: 75%;">
@@ -25,7 +26,7 @@
                                 </colgroup>
                                 <thead>
                                 <tr>
-                                    <th>Name</th>
+                                    <th>Product</th>
                                     <th>Quantity (kg/l)</th>
                                 </tr>
                                 </thead>
