--- a/src/main/resources/templates/ordersList.html
+++ b/src/main/resources/templates/ordersList.html
@@ -8,7 +8,7 @@
         <div th:replace="~{fragments/sidebar :: sidebar('orders')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div>
-             <a href="/newOrder" class="btn btn-success my-3">Add order</a>
+             <a href="/neworder" class="btn btn-success my-3">Add order</a>
             </div>
 
             <div class="accordion" id="ordersAccordion">
