--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -32,7 +32,8 @@
                         </div>
                     </div>
                     <div>
-                        <a id="newUser" class="btn btn-secondary col" href="newrecipe">Add New Recipe</a>
+                        <a class="btn btn-secondary col newUser" href="newrecipe">Add New Recipe</a>
+                        <a class="btn btn-primary col newUser" href="newproduct">Add New Product</a>
                     </div>
                 </div>
             </div>
