--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -33,7 +33,7 @@
                     </div>
                     <div>
                         <a class="btn btn-secondary col newUser" href="newrecipe">Add New Recipe</a>
-                        <a class="btn btn-primary col newUser" href="newproduct">Add New Product</a>
+                        <a class="btn btn-primary col newUser" href="newproduct">Products</a>
                     </div>
                 </div>
             </div>
