--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -15,7 +15,7 @@
                     </ul>
                 </div>
                 <di class="col col-md-1 blank"></di>
-                <div class="col col-md-4 mt-5 ml-4 wastform">
+                <div class="col col-md-4 mt-5 ml-4 showform">
                     <form th:action="@{/submit-form}" method="post">
                         <div class="longlist">
                             <input type="text" class="textfield form-control" placeholder="Recipe Name..">
