--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -9,7 +9,7 @@
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <div class="col md-4">
-                    <div th:if="${successMessage}" th:text="${successMessage}"></div>
+                    <div th:if="${message}" th:text="${message}"></div>
 
                     <!-- Card for each user -->
                     <div th:each="user : ${list}" class="col mb-3">
