--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -12,10 +12,9 @@
              <table class="table mt-5" id="all-table">
                     <thead class="thead-dark">
                     <th>Name</th>
+                    <th>Amount</th>
+                    <th>Expire</th>
                     <th>Type</th>
-                    <th>Weight</th>
-                    <th>Cost </th>
-                    <th>Other</th>
                     </thead>
                 </table>
         </main>
