--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -8,38 +8,27 @@
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
-                <div class="col col-md-4 mt-5">
-                    <input type="text" id="searchInput" class="form-control mb-3 textfield" placeholder="Search items...">
-                    <ul id="itemsList" class="list-group">
-                        <li th:each="itemName, iterStat : ${itemsName}" th:id="'item-' + ${iterStat.index}" th:text="${itemName}" class="list-group-item"></li>
+<!--                <div class="col col-md-4 mt-5">-->
+<!--                    <input type="text" id="searchInput" class="form-control mb-3 textfield" placeholder="Search items...">-->
+<!--                    <ul id="itemsList" class="list-group">-->
+<!--                        <li th:each="itemName, iterStat : ${itemsName}" th:id="'item-' + ${iterStat.index}" th:text="${itemName}" class="list-group-item"></li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--                <di class="col col-md-1 blank"></di>-->
+                <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
+                    <p>Name: <input type="text" th:field="*{name}" /></p>
+                    <p>Ingredients:</p>
+                    <ul>
+                        <li th:each="product : ${products}">
+                            <label th:for="${'ingredient_' + product.id}">
+                                <input type="checkbox" th:id="${'ingredient_' + product.id}"
+                                       th:value="${product.id}" th:field="*{products}" />
+                                <span th:text="${product.name}"></span>
+                            </label>
+                        </li>
                     </ul>
-                </div>
-                <di class="col col-md-1 blank"></di>
-                <div class="col col-md-4 mt-5 ml-4 showform">
-                    <form th:action="@{/addRecipe}" th:object="${recipe}"  method="post">
-                        <div class="longlist">
-                            <input type="text" class="textfield form-control" placeholder="Recipe Name.." name="name">
-                            <input type="text" class="hidden"  name="user">
-                            <table id="targetTable">
-                                <colgroup>
-                                    <col style="width: 75%;">
-                                    <col style="width: 25%;">
-                                </colgroup>
-                                <thead>
-                                <tr>
-                                    <th>Product</th>
-                                    <th>Quantity (kg/l)</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <!-- Rows will be appended here -->
-                                </tbody>
-                            </table>
-                        </div>
-                        <textarea type="text" class="mt-3" style="height: 100px; width: 100%"></textarea>
-                        <input type="submit" value="Submit" class="btn btn-success mt-3">
-                    </form>
-                </div>
+                    <p><input type="submit" value="Add Recipe" /></p>
+                </form>
             </div>
         </main>
         <div class="col"></div>
