--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -4,29 +4,23 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Add Recipe')}"></div>
 <div class="container-fluid">
-    <div class="row bg">
+    <div class="row">
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
-<!--                <div class="col col-md-4 mt-5">-->
-<!--                    <input type="text" id="searchInput" class="form-control mb-3 textfield" placeholder="Search items...">-->
-<!--                    <ul id="itemsList" class="list-group">-->
-<!--                        <li th:each="itemName, iterStat : ${itemsName}" th:id="'item-' + ${iterStat.index}" th:text="${itemName}" class="list-group-item"></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--                <di class="col col-md-1 blank"></di>-->
+                <div th:if="${message}" th:text="${message}"></div>
                 <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
                     <p>Name: <input type="text" th:field="*{name}" /></p>
                     <p>Ingredients:</p>
-                    <ul>
-                        <li th:each="product : ${products}">
-                            <label th:for="${'ingredient_' + product.id}">
-                                <input type="checkbox" th:id="${'ingredient_' + product.id}"
-                                       th:value="${product.id}" th:field="*{products}" />
-                                <span th:text="${product.name}"></span>
-                            </label>
-                        </li>
-                    </ul>
+                    <table>
+                        <tr th:each="product, iterStat : ${products}">
+                            <td>
+                                <input type="checkbox" th:id="${'ingredient_' + product.id}" th:value="${product.id}" th:name="productIds" />
+                            </td>
+                            <td th:text="${product.name}"></td>
+                            <td><input type="number" th:name="quantities" min="1"/></td>
+                        </tr>
+                    </table>
                     <p><input type="submit" value="Add Recipe" /></p>
                 </form>
             </div>
