--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -8,27 +8,42 @@
         <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
+                <div class="col col-md-4 mt-5">
+                    <input type="text" id="searchInput" class="form-control mb-3 textfield" placeholder="Search items...">
+                    <ul id="itemsList" class="list-group">
+                        <li th:each="itemName, iterStat : ${itemsName}" th:id="'item-' + ${iterStat.index}" th:text="${itemName}" class="list-group-item"></li>
+                    </ul>
+                </div>
+                <div class="col col-md-1 blank"></div>
+                <div class="col col-md-6 mt-5 ml-4 showform">
                 <div th:if="${message}" th:text="${message}"></div>
-                <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
-                    <p>Name: <input type="text" th:field="*{name}" /></p>
-                    <p>Ingredients:</p>
-                    <table>
-                        <tr th:each="product, iterStat : ${products}">
-                            <td>
-                                <input type="checkbox" th:id="${'ingredient_' + product.id}" th:value="${product.id}" th:name="productIds" />
-                            </td>
-                            <td th:text="${product.name}"></td>
-                            <td><input type="number" th:name="quantities" min="1"/></td>
-                        </tr>
-                    </table>
-                    <p><input type="submit" value="Add Recipe" /></p>
-                </form>
+                    <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
+                        <p>Name: <input type="text" th:field="*{name}" /></p>
+                        <div class="longlist">
+                            <table id="targetTable">
+                                <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th></th>
+                                    <th>Quantity (kg/l)</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <!-- Rows will be appended here -->
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <input type="submit" value="Submit" class="btn btn-success mt-3">
+                    </form>
+                </div>
+                <div class="col"></div>
             </div>
         </main>
-        <div class="col"></div>
     </div>
-</div>
-    <div th:replace="~{fragments/scripts :: scripts}"></div>
+    </div>
+    </div>
+        <div th:replace="~{fragments/scripts :: scripts}"></div>
     <script th:src="@{/scripts/formPopulator.js}"></script>
     <script th:src="@{/scripts/listUpdate.js}"></script>
 </body>
